--- a/index.html
+++ b/index.html
@@ -4,41 +4,89 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Balkhi's Web Solutions</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+    }
+    header {
+      background: #0a192f;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    header img {
+      width: 100px;
+    }
+    nav {
+      text-align: center;
+      padding: 1rem;
+      background: #112240;
+    }
+    nav a {
+      color: #64ffda;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      margin-bottom: 1rem;
+      border-radius: 10px;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #0a192f;
+      color: white;
+    }
+  </style>
 </head>
 <body>
+
   <header>
+    <img src="https://cdn-icons-png.flaticon.com/512/2721/2721296.png" alt="Tech Logo" />
     <h1>Balkhi's Web Solutions</h1>
-    <p>Custom websites & apps for small businesses</p>
+    <p>Your digital partner for modern, custom web apps</p>
   </header>
 
   <nav>
-    <a href="#about">About</a>
     <a href="#services">Services</a>
+    <a href="#founder">Founder</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>We build simple and powerful digital tools for small businesses like law firms, shops, and startups.</p>
+  <section id="services">
+    <h2>Services We Offer</h2>
+    <ul>
+      <li>⚙️ Custom Website Development</li>
+      <li>📱 Web Applications for Businesses</li>
+      <li>🛍️ E-commerce Solutions for Local Stores</li>
+      <li>🧾 Management Portals for Law Firms</li>
+      <li>📊 Analytics Dashboards & CRM Tools</li>
+    </ul>
   </section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Custom Website Development</li>
-      <li>Web-based Applications</li>
-      <li>Business Automation Tools</li>
-    </ul>
+  <section id="founder">
+    <h2>Founder</h2>
+    <p><strong>Sameer Balkhi</strong> – A passionate developer & digital solutions architect with a vision to empower small businesses through technology. With a hands-on approach and commitment to custom-built platforms, Sameer focuses on delivering practical, efficient, and beautiful tech solutions.</p>
   </section>
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: hello@balkhiswebsolutions.com</p>
+    <p>📧 Email: <a href="mailto:hello@balkhiswebsolutions.com">hello@balkhiswebsolutions.com</a></p>
+    <p>🌐 GitHub: <a href="https://github.com/YOUR_USERNAME" target="_blank">github.com/YOUR_USERNAME</a></p>
+    <p>📍 Location: Remote (Serving globally)</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Balkhi's Web Solutions</p>
+    <p>&copy; 2025 Balkhi's Web Solutions. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
