--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <!-- Header -->
   <header class="bg-white shadow p-4">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-indigo-600">Balkhi's Web Solutions</h1>
+      <div class="flex items-center space-x-3">
+        <img src="https://img.icons8.com/color/48/000000/web-design.png" alt="Logo" class="w-10 h-10">
+        <h1 class="text-2xl font-bold text-indigo-600">Balkhi's Web Solutions</h1>
+      </div>
       <nav>
         <a href="#services" class="mx-2 text-gray-700 hover:text-indigo-600">Services</a>
         <a href="#about" class="mx-2 text-gray-700 hover:text-indigo-600">About</a>
@@ -29,7 +32,7 @@
   <section id="services" class="py-16 bg-white">
     <div class="max-w-6xl mx-auto px-4">
       <h3 class="text-3xl font-bold text-center mb-10 text-indigo-600">Our Services</h3>
-      <div class="grid gap-8 md:grid-cols-3">
+      <div class="grid gap-8 md:grid-cols-4">
         <div class="bg-indigo-50 p-6 rounded-xl shadow">
           <h4 class="text-xl font-semibold mb-2">Custom Websites</h4>
           <p>Responsive, fast, and branded websites to put your business online in style.</p>
@@ -41,6 +44,10 @@
         <div class="bg-indigo-50 p-6 rounded-xl shadow">
           <h4 class="text-xl font-semibold mb-2">Ongoing Support</h4>
           <p>Maintenance, updates, security, and improvements — all handled for you.</p>
+        </div>
+        <div class="bg-indigo-50 p-6 rounded-xl shadow">
+          <h4 class="text-xl font-semibold mb-2">Digital Marketing</h4>
+          <p>Boost your presence with LinkedIn branding, Google Maps setup, SEO, and online visibility strategies.</p>
         </div>
       </div>
     </div>
